--- a/index.html
+++ b/index.html
@@ -14,6 +14,66 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <header>
+    <nav>
+
+    </nav>
+    <img>
+    <h1>
+
+    </h1>
+    <h2>
+
+    </h2>
+</header>
+
+<section class="intro">
+  <div>
+    <h2></h2>
+    <p></p>
+  </div>
+<img>
+</section>
+
+<section class="middleContent">
+  <div class="workAndSkills">
+    <h2>
+      <p>
+
+      </p>
+    </h2>
+  </div>
+
+  <div class="workAndSkills">
+    <h2>
+      <p>
+
+      </p>
+    </h2>
+  </div>
+</section>
+
+ <section class="bottomContent">
+   <img>
+   <h2></h2>
+     <p>
+
+     </p>
+    <p>
+
+    </p>
+
+    <img>
+  
+ </section>
+
+ <footer>
+   <nav>
+     
+   </nav>
+ </footer>
+
+
+  
 </body>
 </html>
