--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@ Candidate for Tribune of The People
 </section>
 
 <section class="middleContent">
-  <div class="workAndSkills">
+  <div class="workAndSkills1">
     <h2>Experience</h2>
-      <p> I served as military tribune under my brother in law the famed Scipio Aemilianus during the the third Punic war. I was the first over the walls of the great city of Carthage ending the three year siege of the city. Upon returning I witnessed the lands owned by my fellow citizen soldiers in disrepair. Unable to restore their lands which had sustained them in the past they were forced to sell them for a mere weeks worth of grain! Who was it that exploited these circumstances? The wealthy patricians!
+      <p>   I served as military tribune under my brother in law the famed Scipio Aemilianus during the the third Punic war. I was the first over the walls of the great city of Carthage ending the three year siege of the city. Upon returning I witnessed the lands owned by my fellow citizen soldiers in disrepair. Unable to restore their lands which had sustained them in the past they were forced to sell them for a mere weeks worth of grain! Who was it that exploited these circumstances? The wealthy patricians!
 
       </p>
     
   </div>
 
-  <div class="workAndSkills">
+  <div class="workAndSkills2">
     <h2>Skills and Advantages</h2>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates et corporis eveniet est doloribus cupiditate beatae tempore ipsum architecto pariatur! Soluta inventore, cumque explicabo aut fugit sequi nostrum expedita recusandae?Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel debitis laudantium tempora? Quisquam vel minima a aliquid consequatur facilis perspiciatis autem omnis eius assumenda incidunt illum consectetur ipsam, debitis aspernatur!
 
