--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@ Tiberius Gracchus
     <h2>
 Candidate for Tribune of The People
     </h2>
+    <h3>Author of the Lex Agraria</h3>
 </header>
 
 <section class="intro">
   <div>
     <h2></h2>
-    <p>Elect me as your Tribune and we together will take back YOUR land from the Patricians Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, sapiente laudantium ut debitis impedit distinctio cumque id ex quasi. Minima nisi corporis officia reprehenderit ea provident possimus sunt rerum dolore. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio quisquam alias assumenda cupiditate rerum expedita, facilis at fugiat fugit, veniam minus voluptate sapiente ab distinctio dolor repellat hic voluptatibus iusto?</p>
+    <p>Elect me as your Tribune and we together will take back YOUR land from the Patricians. The Ager Publicus you won in battle and the land taken in your absence. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, sapiente laudantium ut debitis impedit distinctio cumque id ex quasi. Minima nisi corporis officia reprehenderit ea provident possimus sunt rerum dolore. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio quisquam alias assumenda cupiditate rerum expedita, facilis at fugiat fugit, veniam minus voluptate sapiente ab distinctio dolor repellat hic voluptatibus iusto?</p>
   </div>
 <img>
 </section>
@@ -44,7 +45,7 @@ Candidate for Tribune of The People
 <section class="middleContent">
   <div class="workAndSkills1">
     <h2>Experience</h2>
-      <p>   I served as military tribune under my brother in law the famed Scipio Aemilianus during the the third Punic war. I was the first over the walls of the great city of Carthage ending the three year siege of the city. Upon returning I witnessed the lands owned by my fellow citizen soldiers in disrepair. Unable to restore their lands which had sustained them in the past they were forced to sell them for a mere weeks worth of grain! Who was it that exploited these circumstances? The wealthy patricians!
+      <p>   I served as military tribune under my brother in law the famed Scipio Aemilianus during the the third Punic war. I was the first over the walls of the great city of Carthage ending the three year siege of the city. Upon returning I witnessed the lands owned by my fellow citizen soldiers in disrepair. Unable to restore their lands which had sustained them in the past they were forced to sell them for a mere weeks worth of grain! Who was it that exploited these circumstances? The wealthy patricians! 
 
       </p>
     
@@ -52,21 +53,23 @@ Candidate for Tribune of The People
 
   <div class="workAndSkills2">
     <h2>Skills and Advantages</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates et corporis eveniet est doloribus cupiditate beatae tempore ipsum architecto pariatur! Soluta inventore, cumque explicabo aut fugit sequi nostrum expedita recusandae?Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel debitis laudantium tempora? Quisquam vel minima a aliquid consequatur facilis perspiciatis autem omnis eius assumenda incidunt illum consectetur ipsam, debitis aspernatur!
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates et corporis eveniet est doloribus cupiditate beatae tempore ipsum architecto pariatur! Soluta inventore, cumque explicabo aut fugit sequi nostrum expedita recusandae?Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel debitis laudantium tempora? Quisquam vel minima a aliquid consequatur facilis perspiciatis autem omnis eius assumenda incidunt illum consectetur ipsam, debitis aspernatur! During our war with the Numantines in the province of Hispania i negotiated a treaty that saved the lives of many soldiers
 
       </p>
     
   </div>
 </section>
-
+<img class="bottomImg" src="roman-2729315_960_720.jpg">
  <section class="bottomContent">
-   <img>
-   <h2></h2>
-     <p>
 
+   
+
+   <h2>Contact</h2>
+     <p>
+visit VIII Capitoline Hill
      </p>
     <p>
-
+Post letter on slot LXXVIII of public forum wall
     </p>
 
     <img>
@@ -74,9 +77,12 @@ Candidate for Tribune of The People
  </section>
 
  <footer>
-   <nav>
-
-   </nav>
+    <nav>
+        <a href="#">Reforms</a>
+        <a href="#">Patronage</a>
+        <a href="#">Collaboration</a>
+        <a href="#">Mail</a>
+      </nav>
  </footer>
 
 
